<resources>
    <string name="app_name">Paranoias Gamers</string>

    <!-- Strings related to login -->

    <!-- TODO: remove this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <!-- Example settings for Data & Sync -->

    <!-- Example settings for Notifications -->

    <!-- TODO: remove this placeholder text -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="alert_title">Attention!</string>
    <string name="alert_message">Unable to load data.\nCheck your connection!</string>
    <string name="alert_positive">Close</string>
    <string name="todo">TODO</string>
    <string name="laravel_launches_app">Laravel launches app</string>
    <string name="news">NEWS</string>
    <string name="conexi_n_perdida_revisa_la_conexi_n_wi_fi_o_los_datos_moviles">Conexión perdida.\nRevisa la conexión WI-FI o los datos moviles.</string>
    <string name="error">ERROR</string>
    <string name="no_se_ha_podido_establecer_conexi_n_con_el_servidor">No se ha podido establecer conexión con el servidor.</string>
    <string name="comentarios">comentarios</string>
    <string name="este_servicio_est_en_construcci_n_nmantente_atento_para_saber_cuando_acceder_a_esta_funci_n">Este servicio está en construcción.\nMantente atento para saber cuando acceder a esta función</string>
    <string name="en_construcci_n">EN CONSTRUCCIÓN</string>
    <string name="hablar">Hablar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cargando">Cargando...</string>

</resources>
