<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">






    <RelativeLayout

        android:id="@+id/body"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"


        android:paddingBottom="16dp"


        android:layout_alignParentLeft="true"

        android:layout_alignParentStart="true"
        tools:ignore="RtlHardcoded,UselessParent">


        <ImageButton

            android:id="@+id/image"

            android:layout_width="200dp"

            android:layout_height="200dp"

            android:layout_centerHorizontal="true"

            android:layout_marginTop="15dp"

            android:background="#00FFFFFF"

            android:contentDescription="@string/todo"

            android:scaleType="centerCrop"
            android:src="@drawable/chat" />


        <TextView
            android:id="@+id/texterror"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"

            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/en_construcci_n"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FF0000"
            android:textSize="24sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textoexplicar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/texterror"

            android:fontFamily="monospace"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/este_servicio_est_en_construcci_n_nmantente_atento_para_saber_cuando_acceder_a_esta_funci_n"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="normal|bold" />

    </RelativeLayout>



</RelativeLayout>