<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"

    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mylayout"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        android:elevation="0dp">
        <LinearLayout
           android:background="@android:color/transparent"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView

                android:id="@+id/postCoverImage"
                android:cropToPadding="true"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:saveEnabled="true"
                android:src="@mipmap/ic_launcher_round" />
            <LinearLayout
                android:padding="15dp"
                android:background="@android:color/transparent"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/postTitle"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/laravel_launches_app"
                    />

                <TextView
                    android:id="@+id/postCategory"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorAccent"
                    android:text="@string/news"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>